# threader

./: .gitignore  CMakeLists.txt  LICENSE  make.sh
include/threader/: threader.h
src/: debug.h  threader.cpp
test/: main.cpp
